fix: remove flex to enable truncation, add left spacing for items
Removes unneeded flex on select items which prevented truncation of long titles from working.
Adds left padding to better visualize hierarchy of groups and clickable items inside.

--- a/components/Common/Select/index.module.css
+++ b/components/Common/Select/index.module.css
@@ -87,9 +87,7 @@
   }
 
   .text span {
-    @apply flex
-      items-center
-      gap-2;
+    @apply pl-4;
   }
 
   .label {
